--- a/upsell-products.liquid
+++ b/upsell-products.liquid
@@ -10,7 +10,8 @@
         {% assign upsell_count = 0 %} {# Initialize counter to limit how many upsell items show #}
 
         {% for item in collection.products %}
-        {% if item.id != product.id %} {# Skip the current product from being shown as an upsell #}
+        {% if item.id != product.id %}
+        {# Skip the current product from being shown as an upsell #}
 
         <div class="upsell-item">
             <a href="{{ item.url }}">
@@ -49,7 +50,6 @@
         {% if upsell_count == upsell_limit %}
         {% break %} {# Stop the loop once upsell limit is reached #}
         {% endif %}
-
         {% endif %}
         {% endfor %}
     </div>
